# crime_dashboard_netherland

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/dashboard/: app.py
src/database/: connection.py  models.py
src/database/migrations/: 001_initial.sql
src/ingestion/: cbs_client.py  geo_client.py
src/pipeline/: run_pipeline.py
src/quality/: checks.py
src/transformation/: transform.py
tests/: test_ingestion.py  test_quality.py  test_transformation.py
